# diagrams-xtd

./: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  autogen.sh  config.py  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: py-publish.yml  remove-old-artifacts.yml  test.yml
diagrams/: __init__.py  cli.py
diagrams/aws/: cluster.py
diagrams/azure/: cluster.py
diagrams/c4/: __init__.py
diagrams/custom/: __init__.py
diagrams/generic/: auth.py
diagrams/ibm/: analytics.py  compute.py  network.py  security.py
diagrams/k8s/: clusterconfig.py
diagrams/onprem/: cluster.py  network.py  storage.py
diagrams_xtd/: __init__.py
diagrams_xtd/alibabacloud/: __init__.py
diagrams_xtd/aws/: __init__.py  cluster.py  database.py  management.py
diagrams_xtd/azure/: __init__.py  cluster.py
diagrams_xtd/base/: __init__.py
diagrams_xtd/c4/: __init__.py
diagrams_xtd/custom/: __init__.py
diagrams_xtd/digitalocean/: __init__.py
diagrams_xtd/elastic/: __init__.py
diagrams_xtd/firebase/: __init__.py
diagrams_xtd/gcp/: __init__.py  compute.py
diagrams_xtd/generic/: __init__.py
diagrams_xtd/ibm/: __init__.py
diagrams_xtd/k8s/: __init__.py
diagrams_xtd/oci/: __init__.py  compute.py  database.py
diagrams_xtd/onprem/: __init__.py  ci.py  cluster.py
diagrams_xtd/openstack/: __init__.py
diagrams_xtd/outscale/: __init__.py
diagrams_xtd/programming/: __init__.py
diagrams_xtd/resources/azure/: meta.json
diagrams_xtd/saas/: __init__.py
docker/: Dockerfile
docker/dev/: Dockerfile  requirements.txt
docs/getting-started/: examples.md  installation.md
docs/guides/: cluster.md  diagram.md  edge.md  node.md
docs/nodes/: alibabacloud.md  aws.md  azure.md  c4.md  custom.md  digitalocean.md  elastic.md  firebase.md  gcp.md  generic.md  ibm.md  k8s.md  oci.md  onprem.md  openstack.md  outscale.md  programming.md  saas.md
resources/saas/: meta.json
scripts/: __init__.py  generate.py  resource.py
templates/: apidoc.tmpl
tests/: test_c4.py  test_cli.py  test_diagram.py
website/: package-lock.json  sidebars.json  siteConfig.js
website/static/css/: custom.css
website/static/img/resources/elastic/: meta.json
website/static/img/resources/gcp/: meta.json
website/static/img/resources/generic/: meta.json
website/static/img/resources/onprem/: meta.json
website/static/img/resources/programming/: meta.json
