[tool.poetry]
name = "diagrams"
version = "0.22.0.4" # last digit is only for the ext where x.x.x is for the diagrams version
description = "Extended version of diagrams"
license = "MIT"
authors = ["Diagrams-web <no_spam@nowhere.mail>"]
readme = "README.md"
homepage = ""
repository = "https://github.com/gabriel-tessier/diagrams-xtd"
include = ["resources/**/*"]

[tool.poetry.scripts]
diagrams="diagrams.cli:main"

[tool.poetry.dependencies]
python = "^3.6"
graphviz = ">=0.13.2,<0.20.0"
jinja2 = ">=2.10,<4.0"
contextvars = { version = "^2.4", python = "~3.6" }

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pylint = "^2.7"
black = {version = "^19.0", allow-prereleases = true}
rope = "^0.14.0"
isort = "^4.3"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
